<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzle Block</string>
    <string name="parallaxsoftaction_settings">Settings</string>
    <string name="parallaxsoftaction_backtomain">Back</string>
    <string name="parallaxsoftaction_about">About</string>
    <string name="parallaxsoftaction_donate">Donate</string>
    <string name="parallaxsoftaction_help">Help</string>
    <string name="startButtonString">New Game</string>
    <string name="resumeButtonString">Resume Game</string>
    <string name="quitButtonString">Exit</string>
    <string name="pausebutton">Pause</string>
    <string name="holdbuttonstring">Hold</string>
    <string name="paraSoftplayerNameInputFieldHint">Choose your player name</string>
    <string name="highscoreListDescription">Highscores</string>
    <string name="paraSoftparaSoftstartLevelDialogTitle">Starting Level</string>
    <string name="paraSoftparaSoftstartLevelDialogCancel">Cancel</string>
    <string name="paraSoftparaSoftstartLevelDialogStart">Start</string>
    <string name="title_activity_game">Blockinger</string>
    <string name="title_activity_help">Help</string>
    <string name="score_title">Score</string>
    <string name="level_title">Level</string>
    <string name="time_title">Time</string>
    <string name="apm_title">APM</string>
    <string name="fps_title">FPS</string>
    <string name="defeatDialogTitle">Game Over</string>
    <string name="defeatDialogReturn">Back</string>
    <string name="tab">\u0009</string>
    <string name="anonymous">Anonymous</string>
    <string name="scoreLabel">Score:</string>
    <string name="timeLabel">Time:</string>
    <string name="apmLabel">Total APM:</string>
    <string name="hint">Hint: Blockinger is playable in both screen orientations.</string>
    <string name="highscore_title">Highscores</string>
    <string name="musicAuthorNote">music by Parallax Soft Inc.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_donate">Donate</string>
    <string name="parallaxsoftpref_phantom_summary">Shows the drop location of the active piece</string>
    <string name="parallaxsoftpref_phantom_title">Phantom</string>
    <string name="parallaxsoftpref_fps_summary">The current Frames per Second will be shown below "APM"</string>
    <string name="parallaxsoftpref_fps_title">Show FPS</string>
    <string name="parallaxsoftpref_popup_summary">For successful line clears</string>
    <string name="parallaxsoftpref_popup_title">Pop-Up Text</string>
    <string name="parallaxsoftpref_rng_title">Piece Generation</string>
    <string name="parallaxsoftpref_rngs_default">sevenbag</string>
    <string name="parallaxsoftpref_rng_summary">Choose how the sequence of pieces is generated. 7-Bag-Randomization is highly recommended and is also used in competitive Tetris</string>
    <string-array name ="randomizer_preference_array">
        <item>7-Bag-Randomization (default)</item>
        <item>Plain Random</item>
    </string-array>
    <string-array name ="randomizer_preference_values">
        <item>sevenbag</item>
        <item>plain</item>
    </string-array>
    <string name="softdropspeed_parallaxsoftpref_title">Soft Drop Speed</string>
    <string name="movespeed_parallaxsoftpref_title">Horizontal Speed</string>
    <string name="soundvolume_parallaxsoftpref_title">Effects Volume</string>
    <string name="musicvolume_parallaxsoftpref_title">Music Volume</string>
    <string name="parallaxsoftpref_vibration_button_title">Button Vibration</string>
    <string name="parallaxsoftpref_vibration_button_summary">Vibrates shortly when pressing the game buttons</string>
    <string name="parallaxsoftpref_vibration_events_title">Event Vibration</string>
    <string name="parallaxsoftpref_vibration_events_summary">Vibrates on important game events</string>
    <string name="parallaxsoftpref_button_sound_summary">Provides auditory feedback when pressing the game buttons</string>
    <string name="parallaxsoftpref_button_sound_title">Button Sound</string>
    <string name="parallaxsoftpref_paraSoftfpslimit_summary">Significantly lowers power consumption but may slow down the game</string>
    <string name="parallaxsoftpref_paraSoftfpslimit_title">Limit FPS</string>
    <string name="parallaxsoftpref_paraSoftfpslimittext_summary">The game tries to maintain this frame rate as closely as possible</string>
    <string name="parallaxsoftpref_paraSoftfpslimittext_title">Target FPS</string>
    <string name="parallaxsoftpref_paraSoftfpslimittext_default">30</string>
    <string name="parallaxsoftpref_vibDurOffset_summary">Increase this time to compensate for the delay of your phone\'s vibrator. The duration of button vibrations should be adjusted to be just barely noticeable.\nTime in milliseconds</string>
    <string name="parallaxsoftpref_vibDurOffset_title">Button Vibration Duration</string>
    <string name="parallaxsoftpref_vibDurOffset_default">15</string>
    <string name="parallaxsoftpref_antialiasing_summary">Improves the display quality of text. Disable this for better performance</string>
    <string name="parallaxsoftpref_antialiasing_title">Text Anti-Aliasing</string>
    <string name="parallaxsoftpref_accelerationH_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="parallaxsoftpref_accelerationH_title">Horizontal Acceleration</string>
    <string name="parallaxsoftpref_accelerationV_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="parallaxsoftpref_accelerationV_title">Soft Drop Acceleration</string>
    <string name="parallaxsoftpref_layoutswap_summary">Swap the position of soft drop button and hard drop button</string>
    <string name="parallaxsoftpref_layoutswap_title">Swap Drop Buttons</string>
    <string name="parallaxsoftpref_version_summary">1.1.0\nTouch here to view our website</string>
    <string name="parallaxsoftpref_version_title">Version</string>
    <string name="repository_url">https://parallaxsoft.com</string>
    <string name="parallaxsoftpref_license_summary">Block MatchUP is free software: licensed under the Parallax Soft Inc.</string>
    <string name="parallaxsoftpref_license_title">License Information</string>
    <string name="license_url">https://parallaxsoft.com</string>
    <string name="parallaxsoftpref_license_music_summary">\PParallax Soft Inc.</string>
    <string name="parallaxsoftpref_license_music_title">Music Attribution</string>
    <string name="music_url">https://parallaxsoft.com</string>
    <string name="parallaxsoftpref_author_summary">Syed Muradul Islam\nTouch here to contact Parallax Soft Inc.</string>
    <string name="parallaxsoftpref_author_title">Author</string>
    <string name="parallaxsoftpref_author_url">https://parallaxsoft.com</string>
    <string name="parallaxsoftpref_donate_title">Profile</string>
    <string name="parallaxsoftpref_donate_summary">If you are grateful for this Software and would like to let the Author benefit as well, you can place a Donation as you like.</string>
    <string name="donation_url">"https://parallaxsoft.com"</string>
	<string name="donate_button">Go to website</string>
    <string name="parallaxsoftpref_category_sound">SOUND</string>
    <string name="parallaxsoftpref_category_vibration">VIBRATION</string>
    <string name="parallaxsoftpref_category_other">OTHER</string>
    <string name="parallaxsoftpref_category_advanced">Advanced</string>
    <string name="parallaxsoftpref_category_layout">LAYOUT</string>
    <string name="parallaxsoftpref_help_scoring_title">Scoring</string>
    <string name="parallaxsoftpref_help_scoring_summary">How does the scoring work?</string>
    <string name="parallaxsoftpref_help_scoring_message">Basic points per cleared line are:\n100 points for 1 line,\n300 points for 2 lines,\n500 points for 3 lines,\n800 points for 4 lines (called \"Tetris\").\n\nScoring consecutive Tetrises provides 400 bonus points per Tetris.\nAdditionally the player receives a bonus score for using Soft and Hard Drops. Soft Drops award 1 point per dropped line, while Hard Drops award 2 points per dropped line.</string>
    <string name="parallaxsoftpref_help_levels_title">Levels</string>
    <string name="parallaxsoftpref_help_levels_summary">What do Levels mean?</string>
    <string name="parallaxsoftpref_help_levels_message">Levels are a measurement of difficulty.\nThe speed at which pieces automatically drop down increases by 10% per level.\nThe current level increases after clearing 10 additional lines.</string>
    <string name="parallaxsoftpref_help_vibration_title">Vibration</string>
    <string name="parallaxsoftpref_help_vibration_summary">How to achieve an optimal haptic feedback with vibration.</string>
    <string name="parallaxsoftpref_help_vibration_message">There are some problems with the vibration functionality that can occur on a few devices.\nAlso most tablet devices don\'t support Vibration at all.\nIf your device does support vibration but you don\'t notice the button vibrations, you can increase the vibration duration. This setting is called \"Button Vibration Duration\" and can be found under advanced settings.\nThe duration of button vibrations should be adjusted to be just barely noticeable.</string>
    <string name="parallaxsoftpref_help_apm_title">APM</string>
    <string name="parallaxsoftpref_help_apm_summary">What does APM mean?</string>
    <string name="parallaxsoftpref_help_apm_message">APM means \"Actions Per Minute\".\nThis is a measurement of the player\'s finger speed.</string>
    <string name="parallaxsoftpref_help_fps_title">FPS</string>
    <string name="parallaxsoftpref_help_fps_summary">What does FPS mean? What is it useful for?</string>
    <string name="parallaxsoftpref_help_fps_message">FPS means \"Frames Per Second\".\nThis measures the frequency of display updates. Low FPS can be notices by slow reactions from the game and choppy displaying. High FPS on the other hand consume more power. A good trade-off between display smoothness and power consumption can be achieved between 25 and 35 FPS.\nFPS can be limited in advanced settings.</string>
    <string name="parallaxsoftpref_help_randomizer_title">Randomizer</string>
    <string name="parallaxsoftpref_help_randomizer_summary">What is the difference between the two randomizer modes? (advanced settings)</string>
    <string name="parallaxsoftpref_help_randomizer_message">7-Bag-Randomization:\nGenerates randomly permutated sequences of all 7 pieces. This means, that the player can never encounter 3 identical pieces in a row.\n\nPlain Random:\nThe next piece will be independently generated at random.</string>
    <string name="parallaxsoftpref_help_resumability_title">Resumability</string>
    <string name="parallaxsoftpref_help_resumability_summary">Under which conditions is an paraSoftinterrupted game resumable?</string>
    <string name="parallaxsoftpref_help_resumability_message">The game is resumable from the main screen, if the \"Pause\" button or the native android \"Back\" button was hit.\nThe game is also resumable, if the player switches to another application or the home screen and doesn\'t exit Blockinger.\nThe game will not be resumable, if the \"Exit\" menu entry was hit from the main screen.</string>
    
</resources>